[package]
name = "net-lookup"
version = "0.1.0"
authors = ["Bryan Gilbert <gilbertw1@gmail.com>"]

[dependencies]
hyper = "0.12"
futures = "0.1.23"
serde = { version = "1.0.70", features = ["rc"] }
serde_derive = "1.0.70"
serde_json = "1.0.24"
cidr = { version = "0.0.4", features = ["serde"] }
maxminddb = { git = "https://github.com/gilbertw1/maxminddb-rust" }
domain = "0.2"
tokio-core = "0.1.17"
tokio = "0.1.7"
clap = "2.32.0"
reqwest = "0.8.6"
libc = "0.2.42"
glob = "0.2"
tempdir = "0.3.7"

[[bin]]
name = "net-lookup"
path = "src/app/main.rs"

[[bin]]
name = "net-lookup-updater"
path = "src/updater/main.rs"

[lib]
name = "common"
path = "src/common/lib.rs"
